feat: :sparkles: created route to dashboard metrics
